--- a/BecodeCE/manifest.json
+++ b/BecodeCE/manifest.json
@@ -5,6 +5,12 @@
     "description": "Manage your becode journey from your browser",
     "version": "1.0",
     "author": "Michael Jacquemart",
+    "content_scripts": [   
+        { "run_at" :"document_end",
+          "matches": ["<all_urls>"],
+          "js": ["fetch_github.js"]
+        } ],
+
     "browser_action": {
         "default_icon": "icon.png",
         "default_popup": "popup.html",
